IMPL: feature: inject redis